Fixed overlapping side nav

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -307,25 +307,22 @@ a {
       transform: translate(-50%, -50%) scale(1);
     }
   }
-
   .TooltipContent {
-    animation-duration: 400ms;
-    animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+    transform-origin: var(--radix-popover-content-transform-origin);
+    animation: scaleIn 150ms ease-out;
     will-change: transform, opacity;
-  }
-  .TooltipContent[data-state='delayed-open'][data-side='top'] {
-    animation-name: slideDownAndFade;
-  }
-  .TooltipContent[data-state='delayed-open'][data-side='right'] {
-    animation-name: slideLeftAndFade;
-  }
-  .TooltipContent[data-state='delayed-open'][data-side='bottom'] {
-    animation-name: slideUpAndFade;
-  }
-  .TooltipContent[data-state='delayed-open'][data-side='left'] {
-    animation-name: slideRightAndFade;
-  }
+}
   
+  @keyframes scaleIn {
+    from {
+      opacity: 0;
+      transform: scale(0.5);
+    }
+    to {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
   .table-header {
     top: 80px
   }
